include/k4a/k4atypes.h


typedef enum
{
    K4A_RESULT_SUCCEEDED = 0, 
    K4A_RESULT_FAILED,        
    K4A_RESULT_UNSUPPORTED,   
} k4a_result_t;
typedef enum
{
    K4A_BUFFER_RESULT_SUCCEEDED = 0, 
    K4A_BUFFER_RESULT_FAILED,        
    K4A_BUFFER_RESULT_TOO_SMALL,     
    K4A_BUFFER_RESULT_UNSUPPORTED,   
} k4a_buffer_result_t;
typedef enum
{
    K4A_WAIT_RESULT_SUCCEEDED = 0, 
    K4A_WAIT_RESULT_FAILED,        
    K4A_WAIT_RESULT_TIMEOUT,       
    K4A_WAIT_RESULT_UNSUPPORTED,   
} k4a_wait_result_t;
typedef enum
{
    K4A_LOG_LEVEL_CRITICAL = 0, 
    K4A_LOG_LEVEL_ERROR,        
    K4A_LOG_LEVEL_WARNING,      
    K4A_LOG_LEVEL_INFO,         
    K4A_LOG_LEVEL_TRACE,        
    K4A_LOG_LEVEL_OFF,          
} k4a_log_level_t;
typedef enum
{
    K4A_IMAGE_FORMAT_COLOR_MJPG = 0,
    K4A_IMAGE_FORMAT_COLOR_NV12,
    K4A_IMAGE_FORMAT_COLOR_YUY2,
    K4A_IMAGE_FORMAT_COLOR_BGRA32,
    K4A_IMAGE_FORMAT_DEPTH16,
    K4A_IMAGE_FORMAT_IR16,
    K4A_IMAGE_FORMAT_CUSTOM8,
    K4A_IMAGE_FORMAT_CUSTOM16,
    K4A_IMAGE_FORMAT_CUSTOM,
} k4a_image_format_t;
typedef enum
{
    K4A_WIRED_SYNC_MODE_STANDALONE, 
    K4A_WIRED_SYNC_MODE_MASTER,     
    K4A_WIRED_SYNC_MODE_SUBORDINATE 
} k4a_wired_sync_mode_t;
typedef enum
{
    K4A_FIRMWARE_BUILD_RELEASE, 
    K4A_FIRMWARE_BUILD_DEBUG    
} k4a_firmware_build_t;
typedef enum
{
    K4A_FIRMWARE_SIGNATURE_MSFT,    
    K4A_FIRMWARE_SIGNATURE_TEST,    
    K4A_FIRMWARE_SIGNATURE_UNSIGNED 
} k4a_firmware_signature_t;
typedef void(k4a_logging_message_cb_t)(void *context,
                                       k4a_log_level_t level,
                                       const char *file,
                                       const int line,
                                       const char *message);
typedef void(k4a_memory_destroy_cb_t)(void *buffer, void *context);
typedef struct _k4a_device_configuration_t
{
    k4a_image_format_t color_format;
    uint32_t color_mode_id;
    uint32_t depth_mode_id;
    uint32_t fps_mode_id;
    bool synchronized_images_only;
    int32_t depth_delay_off_color_usec;
    k4a_wired_sync_mode_t wired_sync_mode;
    uint32_t subordinate_delay_off_master_usec;
    bool disable_streaming_indicator;
} k4a_device_configuration_t;
typedef struct _k4a_version_t
{
    uint32_t major;     
    uint32_t minor;     
    uint32_t iteration; 
} k4a_version_t;
typedef struct _k4a_hardware_version_t
{
    k4a_version_t rgb;          
    k4a_version_t depth;        
    k4a_version_t audio;        
    k4a_version_t depth_sensor; 
    k4a_firmware_build_t firmware_build;         
    k4a_firmware_signature_t firmware_signature; 
} k4a_hardware_version_t;